--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Umfrage Weiterleitung</title>
     <script type="text/javascript">
         function redirect() {
-            var survey1 = "https://forms.gle/Ya8vTetfmgufW3WL8";
-            var survey2 = "https://forms.gle/yXiTaTZ4GRWVW6vi7";
-            var survey3 = "https://forms.gle/q1xi4tktb8NrKz5r7";
-            var survey4 = "https://forms.gle/Gfw1qrsocp77jrcg7";
+            var survey1 = "https://forms.gle/rBA3jLKACoCEDk2n7";
+            var survey2 = "https://forms.gle/NSgzihJ6JCgZjaaZ8";
+            var survey3 = "https://forms.gle/xrLDjPbuzGY9tAzTA";
+            var survey4 = "https://forms.gle/BamaTJ5KNNwbRnBLA";
             
             // Zufällige Auswahl der Umfrage
             var random = Math.random();
