--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Umfrage Weiterleitung</title>
     <script type="text/javascript">
         function redirect() {
-            var survey1 = "https://forms.gle/rBA3jLKACoCEDk2n7";
-            var survey2 = "https://forms.gle/NSgzihJ6JCgZjaaZ8";
-            var survey3 = "https://forms.gle/xrLDjPbuzGY9tAzTA";
-            var survey4 = "https://forms.gle/BamaTJ5KNNwbRnBLA";
+            var survey1 = "https://forms.gle/NmxrrGLEQEtgpQEy9";
+            var survey2 = "https://forms.gle/nFx8f4MqXy2ZciGg7";
+            var survey3 = "https://forms.gle/WGbGwZdagthrvJi5A";
+            var survey4 = "https://forms.gle/u419ZNUekpgzDxWJ6";
             
             // Zufällige Auswahl der Umfrage
             var random = Math.random();
