--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     <title>Umfrage Weiterleitung</title>
     <script type="text/javascript">
         function redirect() {
-            var survey1 = "https://forms.gle/NmxrrGLEQEtgpQEy9";
-            var survey2 = "https://forms.gle/nFx8f4MqXy2ZciGg7";
-            var survey3 = "https://forms.gle/WGbGwZdagthrvJi5A";
-            var survey4 = "https://forms.gle/u419ZNUekpgzDxWJ6";
+            var survey1 = "https://forms.gle/y4iVqJ6Haor4om9s6";
+            var survey4 = "https://forms.gle/oFejGVF1CqKgeRuFA";
             
             // Zufällige Auswahl der Umfrage
             var random = Math.random();
-            if (random < 0.25) {
+            if (random < 0.5) {
                 window.location.href = survey1;
-            } else if (random < 0.5) {
-                window.location.href = survey2;
-            } else if (random < 0.75) {
-                window.location.href = survey3;
             } else {
                 window.location.href = survey4;
             }
